--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>HELLO WORLD!</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum aut
+      eligendi voluptates numquam dolores nisi fugiat reiciendis aliquam
+      praesentium architecto quasi dolorum temporibus dicta harum, officia autem
+      eum incidunt repellat.
+    </p>
   </body>
 </html>
