--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test</title>
-  </head>
-  <body>
-    <h1>HELLO WORLD!</h1>
-    <h2>Hello world</h2>
-    <h3>look at me, ME !</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum aut
-      eligendi voluptates numquam dolores nisi fugiat reiciendis aliquam
-      praesentium architecto quasi dolorum temporibus dicta harum, officia autem
-      eum incidunt repellat.
-    </p>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Test</title>
+    </head>
+    <body>
+        <h1>HELLO WORLD!</h1>
+        <h2>Hello world</h2>
+        <h3>look at me, ME !</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum aut
+            eligendi voluptates numquam dolores nisi fugiat reiciendis aliquam
+            praesentium architecto quasi dolorum temporibus dicta harum, officia
+            autem eum incidunt repellat.
+        </p>
+        <ul>
+            <li>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Impedit dolorem atque perspiciatis distinctio tempora ab sed
+                doloremque alias fugiat consectetur vitae nulla ad sequi cum,
+                suscipit, aspernatur sint, sapiente quia?
+            </li>
+            <li>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Impedit dolorem atque perspiciatis distinctio tempora ab sed
+                doloremque alias fugiat consectetur vitae nulla ad sequi cum,
+                suscipit, aspernatur sint, sapiente quia?
+            </li>
+        </ul>
+    </body>
 </html>
